@@ -268,6 +268,12 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)\
 				RelativePath="ScreenInstructions.h">
 			</File>
 			<File
+				RelativePath="ScreenJukebox.cpp">
+			</File>
+			<File
+				RelativePath="ScreenJukebox.h">
+			</File>
+			<File
 				RelativePath="ScreenLogo.cpp">
 			</File>
 			<File
